Configuration popup - Alignment Fix

--- a/src/out_patients/modules/billing/submodules/billing/prompts/configuration-billing/configuration-billing.component.scss
+++ b/src/out_patients/modules/billing/submodules/billing/prompts/configuration-billing/configuration-billing.component.scss
@@ -30,4 +30,8 @@
     .secondcolumn{
         margin-left: 40% !important;
     }
+    .secondrowsecondcolumn
+    {
+        margin-left: 45% !important;
+    }
 }
